--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@ body {
 header {
     background: #ffe6ff;
     padding: 20px 0;
+    width: 100%;
 }
 
 .banner {
@@ -21,8 +22,9 @@ header {
 .principal {
     padding: 3em 0;
     background: #f53b3b9f;
-    940px; width:
-    margin: 0 auto;
+    940px;
+    width:
+        margin: 0 auto;
 }
 
 .principal p {
@@ -48,219 +50,219 @@ header {
 }
 
 .caixa {
-    position: relative;
     width: 940px;
     margin: 0 auto;
-}
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 
-nav {
-    position: absolute;
-    top: 110px;
-    right: 0;
-}
+    nav {
+        position: absolute;
+        top: 110px;
+        right: 0;
+    }
 
-nav li {
-    display: inline;
-    margin: 0 0 0 15px;
-}
+    nav li {
+        display: inline;
+        margin: 0 0 0 15px;
+    }
 
-nav a {
-    text-transform: uppercase;
-    color: #000000;
-    font-weight: bold;
-    font-size: 22px;
-    text-decoration: none;
-}
+    nav a {
+        text-transform: uppercase;
+        color: #000000;
+        font-weight: bold;
+        font-size: 22px;
+        text-decoration: none;
+    }
 
-nav a:hover {
-    color: #C78C19;
-    text-decoration: underline;
-}
+    nav a:hover {
+        color: #C78C19;
+        text-decoration: underline;
+    }
 
-.produtos {
-    width: 940px;
-    margin: 0 auto;
-    padding: 50px 0;
-}
+    .produtos {
+        width: 940px;
+        margin: 0 auto;
+        padding: 50px 0;
+    }
 
-.produtos li {
-    display: inline-block;
-    text-align: center;
-    width: 30%;
-    vertical-align: top;
-    margin: 0 1.5%;
-    padding: 30px 20px;
-    box-sizing: border-box;
-    border: 2px solid #000000;
-    border-radius: 10px;
-}
+    .produtos li {
+        display: inline-block;
+        text-align: center;
+        width: 30%;
+        vertical-align: top;
+        margin: 0 1.5%;
+        padding: 30px 20px;
+        box-sizing: border-box;
+        border: 2px solid #000000;
+        border-radius: 10px;
+    }
 
-.produtos li:hover {
-    border-color: #C78C19;
-}
+    .produtos li:hover {
+        border-color: #C78C19;
+    }
 
-.produtos li:active {
-    border-color: #088C19;
-}
+    .produtos li:active {
+        border-color: #088C19;
+    }
 
-.produtos h2 {
-    font-size: 30px;
-    font-weight: bold;
-}
+    .produtos h2 {
+        font-size: 30px;
+        font-weight: bold;
+    }
 
-.produtos li:hover h2 {
-    font-size: 34px;
-}
+    .produtos li:hover h2 {
+        font-size: 34px;
+    }
 
-.produto-descricao {
-    font-size: 18px;
-}
+    .produto-descricao {
+        font-size: 18px;
+    }
 
-.produto-preco {
-    font-size: 22px;
-    font-weight: bold;
-    margin-top: 10px;
-}
+    .produto-preco {
+        font-size: 22px;
+        font-weight: bold;
+        margin-top: 10px;
+    }
 
-main {
-    
-}
+    main {}
 
-.beneficios {
-    padding: 3em 0;
-    background: #888888;
-}
+    .beneficios {
+        padding: 3em 0;
+        background: #888888;
+    }
 
-.conteudo-beneficios {
-    width: 640px;
-    margin: 0 auto;
-}
+    .conteudo-beneficios {
+        width: 640px;
+        margin: 0 auto;
+    }
 
-.lista-beneficios {
-    width: 40%;
-    display: inline-block;
-    vertical-align: top;
-}
+    .lista-beneficios {
+        width: 40%;
+        display: inline-block;
+        vertical-align: top;
+    }
 
-.itens {
-    line-height: 1.5;
-}
+    .itens {
+        line-height: 1.5;
+    }
 
-.itens:first-child {
-    font-weight: bold;
-}
+    .itens:first-child {
+        font-weight: bold;
+    }
 
-.itens:before {
-    content: "✔️";
-}
+    .itens:before {
+        content: "✔️";
+    }
 
-.imagem-beneficios {
-    width: 60%;
-    opacity: 1;
-    transition: 400ms;
-    box-shadow: 10px 10px 10px 0 #000000;
-}
+    .imagem-beneficios {
+        width: 60%;
+        opacity: 1;
+        transition: 400ms;
+        box-shadow: 10px 10px 10px 0 #000000;
+    }
 
-.imagem-beneficios:hover {
-    opacity: 0.3;
-}
+    .imagem-beneficios:hover {
+        opacity: 0.3;
+    }
 
-form {
-    margin: 40px 0;
-}
+    form {
+        margin: 40px 0;
+    }
 
-form label,
-form legend {
-    display: block;
-    font-size: 20px;
-    margin: 0 0 10px;
-}
+    form label,
+    form legend {
+        display: block;
+        font-size: 20px;
+        margin: 0 0 10px;
+    }
 
-form input {
-    display: block;
-    margin: 0 0 20px;
-    padding: 10px 25px;
-    width: 50%;
-}
+    form input {
+        display: block;
+        margin: 0 0 20px;
+        padding: 10px 25px;
+        width: 50%;
+    }
 
-.input-padrao {
-    display: block;
-    margin: 0 0 20px;
-    padding: 10px 25px;
-    width: 50%;
-}
+    .input-padrao {
+        display: block;
+        margin: 0 0 20px;
+        padding: 10px 25px;
+        width: 50%;
+    }
 
-.checkbox {
-    margin: 20px 0;
-}
+    .checkbox {
+        margin: 20px 0;
+    }
 
-footer {
-    text-align: center;
-    background: url("img/bg.jpg");
-    padding: 40px 0;
-}
+    footer {
+        text-align: center;
+        background: url("img/bg.jpg");
+        padding: 40px 0;
+    }
 
-.copyright {
-    color: #FFFFFF;
-    font-size: 13px;
-    margin: 20px 0 0;
-}
+    .copyright {
+        color: #FFFFFF;
+        font-size: 13px;
+        margin: 20px 0 0;
+    }
 
-.enviar {
-    width: 40%;
-    padding: 15px 0;
-    background: orange;
-    color: white;
-    font-weight: bold;
-    font-size: 18px;
-    border: none;
-    border-radius: 5px;
-    transition: 1s all;
-    cursor: pointer;
-}
+    .enviar {
+        width: 40%;
+        padding: 15px 0;
+        background: orange;
+        color: white;
+        font-weight: bold;
+        font-size: 18px;
+        border: none;
+        border-radius: 5px;
+        transition: 1s all;
+        cursor: pointer;
+    }
 
-.enviar:hover {
-    background: darkorange;
-    transform: scale(1.2);
-}
+    .enviar:hover {
+        background: darkorange;
+        transform: scale(1.2);
+    }
 
-table {
-    margin: 20px 0 40px;
-}
+    table {
+        margin: 20px 0 40px;
+    }
 
-thead {
-    background: #555555;
-    color: white;
-    font-weight: bold;
-}
+    thead {
+        background: #555555;
+        color: white;
+        font-weight: bold;
+    }
 
-td, th {
-    border: 1px solid #000000;
-    padding: 8px 15px;
-}
+    td,
+    th {
+        border: 1px solid #000000;
+        padding: 8px 15px;
+    }
 
-.mapa {
-    padding: 3em 0;
-    background-color: linear-gradient(#f00606d2, #888888);
-}
+    .mapa {
+        padding: 3em 0;
+        background-color: linear-gradient(#f00606d2, #888888);
+    }
 
-.mapa p {
-    margin: 0 0 2em;
-    text-align: center;
-}
+    .mapa p {
+        margin: 0 0 2em;
+        text-align: center;
+    }
 
-.mapa-conteudo {
-    width: 940px;
-    margin: 0 auto;
-}
+    .mapa-conteudo {
+        width: 940px;
+        margin: 0 auto;
+    }
 
-.video {
-    width: 560px;
-    margin: 2em auto;
-}
+    .video {
+        width: 560px;
+        margin: 2em auto;
+    }
 
 
-/* SELETORES AVANÇADOS PARA SEREM USADOS
+    /* SELETORES AVANÇADOS PARA SEREM USADOS
 
 main p {
     background: red;
@@ -284,20 +286,26 @@ img ~ p {
 
 */
 
-@media screen and (max-width: 480px) {
-    .caixa, .principal, .conteudo-beneficios, .mapa-conteudo, .video {
-        width: auto;
-    }
+    @media screen and (max-width: 480px) {
 
-    h1 {
-        text-align: center;
-    }
+        .caixa,
+        .principal,
+        .conteudo-beneficios,
+        .mapa-conteudo,
+        .video {
+            width: auto;
+        }
 
-    nav {
-        position: static;
-    }
+        h1 {
+            text-align: center;
+        }
 
-    .lista-beneficios, .imagem-beneficios {
-        width: 100%;
+        nav {
+            position: static;
+        }
+
+        .lista-beneficios,
+        .imagem-beneficios {
+            width: 100%;
+        }
     }
-}
