--- a/style.css
+++ b/style.css
@@ -220,7 +220,7 @@ footer {
 }
 
 .enviar:hover {
-    background: darkorange;
+    background: rgb(255, 253, 251);
     transform: scale(1.2);
 }
 
@@ -284,4 +284,25 @@ img ~ p {
 
 .principal p:not(#missao) {
     background: orange;
+}
+
+*/
+
+@media screen and (max-width: 480px) {
+    .caixa, .principal, .conteudo-beneficios, .mapa-conteudo, .video {
+        width: auto;
+    }
+
+    h1 {
+        text-align: center;
+    }
+
+    nav {
+        position: static;
+    }
+
+    .lista-beneficios, .imagem-beneficios {
+        width: 100%;
+    }
+
 }
