--- a/style.css
+++ b/style.css
@@ -98,7 +98,8 @@ nav a:hover {
 }
 
 .produtos li:hover {
-    border-color: #7779ff;;
+    border-color: #7779ff;
+    ;
 }
 
 .produtos li:active {
@@ -289,7 +290,12 @@ img ~ p {
 */
 
 @media screen and (max-width: 480px) {
-    .caixa, .principal, .conteudo-beneficios, .mapa-conteudo, .video {
+
+    .caixa,
+    .principal,
+    .conteudo-beneficios,
+    .mapa-conteudo,
+    .video {
         width: auto;
     }
 
@@ -301,11 +307,13 @@ img ~ p {
         position: static;
     }
 
-    .lista-beneficios, .imagem-beneficios {
+    .lista-beneficios,
+    .imagem-beneficios {
         width: 100%;
     }
 
 }
+
 :root {
     --cor-azul: #7779ff;
 }
@@ -321,6 +329,25 @@ img ~ p {
     top: 0;
     left: 0;
     width: 100%;
-    height: 5px; /* espessura da linha */
+    height: 5px;
+    /* espessura da linha */
     background-color: var(--cor-azul);
     transform: translateY(-50%);
+
+    root {
+        --cor-azul: #7779ff;
+    }
+
+    .sua-classe-da-imagem {
+        position: relative;
+    }
+
+    .sua-classe-da-imagem::before {
+        content: "";
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 5px;
+        background-color: var(--cor-azul);
+    }
