--- a/style.css
+++ b/style.css
@@ -1,3 +1,14 @@
+:root {
+      /*cores personalizadas */
+      ~~cor-principal:
+      ~~cor-escuro:
+      ~~cor-secundaria:
+      ~~cor-azulclaro:
+      ~~cor-azulescuro:
+      ~~cor-preto:
+      ~~corbranca:
+}
+
 body {
     font-family: 'Montserrat', sans-serif;
 }
@@ -350,4 +361,5 @@ img ~ p {
         width: 100%;
         height: 5px;
         background-color: var(--cor-azul);
+
     }
