--- a/style.css
+++ b/style.css
@@ -2,8 +2,8 @@
     --cor-principal: #ffe6ff;     
     --cor-escuro: #000000;        
     --cor-secundaria: #ff77eda4; 
-    --cor-azulclaro: #c486c4;
-    --cor-azulescuro: #7779ff;    
+    --cor-rosaclaro: #c486c4;
+    --cor-rosaescuro: #7779ff;    
     --cor-preto: #000000;
     --cor-branca: #ffffff;
 
@@ -361,5 +361,6 @@ img ~ p {
         background-color: var(--cor-azul);
 
     }
+
 
 
