--- a/style.css
+++ b/style.css
@@ -196,7 +196,7 @@ form-center input {
     width: 50%;
 }
 
-.input-padrao {
+form-center input-padrao {
     display: block;
     margin: 0 0 20px;
     padding: 10px 25px;
