--- a/style.css
+++ b/style.css
@@ -180,11 +180,14 @@ main {}
 }
 
 .form-center {
+    max-width: 600px;
     margin: 40px 0;
+    padding: 30px;
+    width: 100%;
 }
 
 .form-center label,
-form-center legend {
+.form-center legend {
     display: block;
     font-size: 20px;
     margin: 0 0 10px;
