--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@ header {
 
 .principal {
     padding: 3em 0;
-    background: #FEFEFE;
+    background: #ee56c1;
     width: 940px;
     margin: 0 auto;
 }
