--- a/style.css
+++ b/style.css
@@ -30,8 +30,8 @@ header {
 
 .principal {
     padding: 3em 0;
-    background: #ee56c1;
-    width: 940px;
+    background: #ec74c8;
+    width: 1600px;
     margin: 0 auto;
 }
 
