--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@ header {
 .principal {
     padding: 3em 0;
     background: #ec74c8;
-    width: 1540px;
+    width: 1000px;
     margin: 0 auto;
 }
 
@@ -54,7 +54,10 @@ header {
 }
 
 .imagembeneficios {
-    width: 60%;
+   width: 60%;
+    opacity: 1;
+    transition: 400ms;
+    box-shadow: 10px 10px 10px 0 #000000;
 }
 
 .caixa {
