--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@ header {
 .principal {
     padding: 3em 0;
     background: #ec74c8;
-    width: 1000px;
+    width: 1400px;
     margin: 0 auto;
 }
 
@@ -61,11 +61,9 @@ header {
 }
 
 .caixa {
-    width: 940px;
+   position: relative;
+    width: 1200px;
     margin: 0 auto;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
 }
 
 nav {
@@ -152,7 +150,7 @@ main {}
 }
 
 .lista-beneficios {
-    width: 40%;
+   width: 40%;
     display: inline-block;
     vertical-align: top;
 }
@@ -225,12 +223,10 @@ footer {
 }
 
 .enviar {
-    width: 40%;
+     width: 40%;
     padding: 15px 0;
-    background: orange;
+    background: #896540;
     color: white;
-    background:var (--cor-principal);
-    color:var (--cor-branco);
     font-weight: bold;
     font-size: 18px;
     border: none;
