--- a/style.css
+++ b/style.css
@@ -46,7 +46,12 @@ header {
 .principal em {
     font-style: italic;
 }
-
+table {
+    width: 100%;
+    margin-bottom: .5em;
+    table-layout: fixed;
+    text-align: center;
+}
 .utensilios {
     width: calc(40% - 26px);
     float: left;
