--- a/style-home.css
+++ b/style-home.css
@@ -34,7 +34,7 @@ p {
 }
 
 em strong {
-	color: #ffffffde;
+	color: #ffe6ff;
 }
 
 .itens {
@@ -42,7 +42,7 @@ em strong {
 }
 
 .beneficios {
-	background: #FFFFFF;
+	background: #ffe6ff;
 	padding: 20px;
 }
 
@@ -58,7 +58,7 @@ em strong {
 }
 
 header {
-	background: #BBBBBB;
+	background: #ffe6ff;
 	padding: 20px 0;
 }
 
