--- a/style.css
+++ b/style.css
@@ -55,31 +55,25 @@
 
     .imagembeneficios {
         width: 60%;
+        opacity: 1;
+        transition: 400ms;
+        box-shadow: 10px 10px 10px 0 #000000;
+
+    }
+
+    .imagem-beneficios:hover {
+        opacity: 0.3;
     }
 
     .caixa {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
         position: relative;
-        width: 940px;
+        width: 1200px;
         margin: 0 auto;
     }
 
-    .logo {
-        display: flex;
-        align-items: center;
-        font-size: 1.5em;
-        font-weight: bold;
-    }
-
-    .header-logo {
-        width: 90px;
-        margin-right: 10px;
-    }
-
     nav {
-        top: 110px;
+        position: absolute;
+        top: 60px;
         right: 0;
     }
 
@@ -90,14 +84,14 @@
 
     nav a {
         text-transform: uppercase;
-        color: var(--cor-preto);
+        color: #000;
         font-weight: bold;
         font-size: 22px;
         text-decoration: none;
     }
 
     nav a:hover {
-        color: var(--cor-principal);
+        color: #C78C19;
         text-decoration: underline;
     }
 
@@ -120,11 +114,12 @@
     }
 
     .produtos li:hover {
-        border-color: var(--cor-principal);
+        border-color: #C78C19;
+
     }
 
     .produtos li:active {
-        border-color: var(--cor-azulescuro);
+        border-color: #088C19;
     }
 
     .produtos h2 {
@@ -134,10 +129,6 @@
 
     .produtos li:hover h2 {
         font-size: 34px;
-    }
-
-    .imagem-produtos {
-        width: 300px;
     }
 
     .produto-descricao {
@@ -150,21 +141,19 @@
         margin-top: 10px;
     }
 
+
+
     .beneficios {
         padding: 3em 0;
-        background: var(--cor-secundaria);
+        background: #ffe6ff;
     }
 
     .conteudo-beneficios {
-        display: flex;
-        align-items: center;
-        gap: 20px;
         width: 640px;
         margin: 0 auto;
     }
 
     .lista-beneficios {
-        list-style: none;
         width: 40%;
         display: inline-block;
         vertical-align: top;
@@ -179,46 +168,44 @@
     }
 
     .itens:before {
-        content: "✓";
+        content: "-";
     }
 
     .imagem-beneficios {
         width: 60%;
-        opacity: 1;
-        transition: 400ms;
-        box-shadow: 10px 10px 10px 0 var(--cor-preto);
     }
 
-    .imagem-beneficios:hover {
-        opacity: 0.3;
+    form {
+        margin: 40px 0;
     }
 
-    .form-center {
-        max-width: 600px;
-        margin: 40px auto;
-        padding: 30px;
-        width: 100%;
-    }
-
-    .form-center label,
-    .form-center legend {
+    form label,
+    form legend {
         display: block;
-        font-size: 16px;
+        font-size: 20px;
         margin: 0 0 10px;
     }
 
-    .form-center input {
+    form input {
         display: inline-block;
         margin: 0 0 20px;
         padding: 10px 25px;
         width: auto;
     }
 
-    .form-center .input-padrao {
+    .input-padrao {
         display: inline-block;
         margin: 0 0 20px;
-        padding: 10px 25px;
-        width: 100%;
+    }
+
+
+
+    .formulario {
+
+        margin: 0 30%;
+
+        justify-content: center;
+        align-items: center;
     }
 
     .checkbox {
@@ -227,25 +214,21 @@
 
     footer {
         text-align: center;
-        background: #313030;
-        padding: 0 0;
-    }
-
-    .logofooter {
-        width: 100%;
+        background: var(--cor-principal);
+        padding: 40px 0;
     }
 
     .copyright {
-        color: var(--cor-branco);
+        color: #FFFFFF;
         font-size: 13px;
-        margin: 10px 0 0;
+        margin: 20px 0 0;
     }
 
     .enviar {
         width: 40%;
         padding: 15px 0;
-        background: var(--cor-principal);
-        color: var(--cor-branco);
+        background: #896540;
+        color: white;
         font-weight: bold;
         font-size: 18px;
         border: none;
@@ -255,7 +238,7 @@
     }
 
     .enviar:hover {
-        background: darkorange;
+        background: #896540;
         transform: scale(1.2);
     }
 
@@ -286,42 +269,18 @@
     }
 
     .mapa-conteudo {
-        width: 940px;
+        width: 600px;
         margin: 0 auto;
-        display: flex;
         justify-content: center;
         align-items: center;
     }
+
+
 
     .video {
         width: 560px;
         margin: 2em auto;
     }
-
-
-    /* SELETORES AVANÇADOS PARA SEREM USADOS
-
-main p {
-    background: red;
-}
-
-main > p {
-    background: red; 
-}
-
-img + p { 
-    background: blue;
-}
-
-img ~ p {
-    background: yellow
-} 
-
-.principal p:not(#missao) {
-    background: orange;
-}
-
-*/
 
     @media screen and (max-width: 480px) {
 
@@ -345,5 +304,34 @@ img ~ p {
         .imagem-beneficios {
             width: 100%;
         }
-
     }
+
+
+    .preco {
+        font-weight: bold;
+        text-align: center;
+    }
+
+    /*SELETORES ESPECIAIS
+main p {
+background:
+}
+main + p {
+background::
+}
+img-p{
+background:
+}
+img+p{
+background:
+}
+img~{
+background:
+}
+principal p:not(#missao){
+background: 
+}
+
+
+
+*/
