--- a/style.css
+++ b/style.css
@@ -48,7 +48,7 @@
     }
 
     .utensilios {
-        width: calc(1% - 1px);
+        width: calc(40% - 26px);
         float: left;
         margin: 0 20px 20px 0;
     }
@@ -58,11 +58,6 @@
         opacity: 1;
         transition: 400ms;
         box-shadow: 10px 10px 10px 0 #000000;
-
-    }
-
-    .imagem-beneficios:hover {
-        opacity: 0.3;
     }
 
     .caixa {
@@ -72,9 +67,7 @@
     }
 
     nav {
-        position: absolute;
-        top: 60px;
-        right: 0;
+        position: static;
     }
 
     nav li {
@@ -84,14 +77,15 @@
 
     nav a {
         text-transform: uppercase;
-        color: #000;
+        color: #000000;
+        color: var (--cor-preto);
         font-weight: bold;
         font-size: 22px;
         text-decoration: none;
     }
 
     nav a:hover {
-        color: #C78C19;
+        color: C78C19;
         text-decoration: underline;
     }
 
@@ -110,16 +104,18 @@
         padding: 30px 20px;
         box-sizing: border-box;
         border: 2px solid #000000;
+        border: var (--cor-escuro);
         border-radius: 10px;
     }
 
     .produtos li:hover {
-        border-color: #C78C19;
-
+        border-color: #7779ff;
+        border-color: var (--cor-principal);
     }
 
     .produtos li:active {
         border-color: #088C19;
+        border-color: var (--cor-rosaescuro);
     }
 
     .produtos h2 {
@@ -141,11 +137,11 @@
         margin-top: 10px;
     }
 
-
+    main {}
 
     .beneficios {
         padding: 3em 0;
-        background: #ffe6ff;
+        background: #ff2e5b;
     }
 
     .conteudo-beneficios {
@@ -168,44 +164,46 @@
     }
 
     .itens:before {
-        content: "-";
+        content: "✔️";
     }
 
     .imagem-beneficios {
         width: 60%;
+        opacity: 1;
+        transition: 400ms;
+        box-shadow: 10px 10px 10px 0 #000000;
     }
 
-    form {
-        margin: 40px 0;
+    .imagem-beneficios:hover {
+        opacity: 0.3;
     }
 
-    form label,
-    form legend {
+    .form-center {
+        max-width: 600px;
+        margin: 40px auto;
+        padding: 30px;
+        width: 100%;
+    }
+
+    .form-center label,
+    .form-center legend {
         display: block;
-        font-size: 20px;
+        font-size: 16px;
         margin: 0 0 10px;
     }
 
-    form input {
+    .form-center input {
         display: inline-block;
         margin: 0 0 20px;
         padding: 10px 25px;
         width: auto;
     }
 
-    .input-padrao {
+    .form-center input-padrao {
         display: inline-block;
         margin: 0 0 20px;
-    }
-
-
-
-    .formulario {
-
-        margin: 0 30%;
-
-        justify-content: center;
-        align-items: center;
+        padding: 10px 25px;
+        width: 100%;
     }
 
     .checkbox {
@@ -214,7 +212,7 @@
 
     footer {
         text-align: center;
-        background: var(--cor-principal);
+        background: url("img/bg.jpg");
         padding: 40px 0;
     }
 
@@ -238,29 +236,36 @@
     }
 
     .enviar:hover {
-        background: #896540;
+        background: rgb(255, 253, 251);
         transform: scale(1.2);
     }
 
     table {
-        margin: 20px 0 40px;
+        width: 100%;
+        margin: 20px 0 20px;
+        table-layout: fixed;
+        text-align: center;
     }
 
     thead {
         background: #555555;
         color: white;
+        background: var (--cor-cinzamédioaescuro);
+        color: var (--cor-branco);
         font-weight: bold;
     }
 
     td,
     th {
         border: 1px solid #000000;
+        border: var (--cor-preto);
         padding: 8px 15px;
     }
 
     .mapa {
         padding: 3em 0;
-        background-color: linear-gradient(#FEFEFE, #888888);
+        background-color: linear-gradient(#e95dc6d2, #888888);
+        background-color: var (--cor-, --cor-cinza);
     }
 
     .mapa p {
@@ -269,18 +274,42 @@
     }
 
     .mapa-conteudo {
-        width: 600px;
+        width: 940px;
         margin: 0 auto;
+        display: flex;
         justify-content: center;
         align-items: center;
     }
-
-
 
     .video {
         width: 560px;
         margin: 2em auto;
     }
+
+
+    /* SELETORES AVANÇADOS PARA SEREM USADOS
+
+main p {
+    background: red;
+}
+
+main > p {
+    background: red; 
+}
+
+img + p { 
+    background: blue;
+}
+
+img ~ p {
+    background: yellow
+} 
+
+.principal p:not(#missao) {
+    background: orange;
+}
+
+*/
 
     @media screen and (max-width: 480px) {
 
@@ -304,34 +333,42 @@
         .imagem-beneficios {
             width: 100%;
         }
+
     }
 
-
-    .preco {
-        font-weight: bold;
-        text-align: center;
+    :root {
+        --cor-azul: #c486c4;
     }
 
-    /*SELETORES ESPECIAIS
-main p {
-background:
-}
-main + p {
-background::
-}
-img-p{
-background:
-}
-img+p{
-background:
-}
-img~{
-background:
-}
-principal p:not(#missao){
-background: 
-}
+    .img-container {
+        position: relative;
+        display: inline-block;
+    }
 
+    .img-container::before {
+        content: "";
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 5px;
+        /* espessura da linha */
+        background-color: var(--cor-azul);
+        transform: translateY(-50%);
 
+        :root {
+            --cor-azul: #7779ff;
+        }
 
-*/
+        .sua-classe-da-imagem {
+            position: relative;
+        }
+
+        .sua-classe-da-imagem::before {
+            content: "";
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 5px;
+            background-color: var(--cor-azul);
