--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@
     .principal {
         padding: 3em 0;
         background: #ec74c8;
-        width: 1500px;
+        width: 100%;
         margin: 0 auto;
     }
 
