--- a/style.css
+++ b/style.css
@@ -49,7 +49,7 @@
 
     .utensilios {
         width: 40% - 26px;
-        margin: 0 20px 20px 0;
+        margin: 0 20px 20px 570px;
     }
 
     .imagembeneficios {
