--- a/style.css
+++ b/style.css
@@ -48,8 +48,8 @@
     }
 
     .utensilios {
-        width: 40% - 26px;
-        margin: 0 20px 20px 570px;
+        width: 30%;
+        margin: 0 20px 20px 490px;
     }
 
     .imagembeneficios {
