--- a/style.css
+++ b/style.css
@@ -49,7 +49,7 @@
 
     .utensilios {
         width: 30%;
-        margin: 0 20px 20px 490px;
+        margin: 0 20px 20px 500px;
     }
 
     .imagembeneficios {
@@ -351,7 +351,6 @@ img ~ p {
         left: 0;
         width: 100%;
         height: 5px;
-        /* espessura da linha */
         background-color: var(--cor-azul);
         transform: translateY(-50%);
 
@@ -371,3 +370,5 @@ img ~ p {
             width: 100%;
             height: 5px;
             background-color: var(--cor-azul);
+       
+        }
