--- a/style.css
+++ b/style.css
@@ -53,7 +53,7 @@
     }
 
     .imagembeneficios {
-        width: 100%;
+        width: 200%;
         opacity: 1;
         transition: 400ms;
         box-shadow: 10px 10px 10px 0 #000000;
@@ -108,7 +108,7 @@
     }
 
     .produtos li:hover {
-        border-color: #7779ff;
+        border-color: #030327;
         border-color: var (--cor-principal);
     }
 
