--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
     --cor-escuro: #000000;
     --cor-secundaria: #ff77eda4;
     --cor-rosaclaro: #c486c4;
-    --cor-azul: #030327;
+    --cor-vermelho: #f01a3e;
     --cor-roxo: #7715a5;
     --cor-branca: #ffffff;
 
@@ -140,7 +140,7 @@
 
     .beneficios {
         padding: 3em 0;
-        background: #030327;
+        background: #f01a3e;
 
     }
 
