--- a/style.css
+++ b/style.css
@@ -1,8 +1,13 @@
-@import url(styles/header.css)
-@import url(styles/footer.css);
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
+
+@import url(/styles/header.css) @import url(/styles/footer.css);
+@import url(/styles/produtos.css);
+@import url(/styles/contatos.css);
+@import url(/styles/beneficios.css);
+@import url(/styles/principal.css);
 
 :root {
-   /*cores personalizadas*/
+    /*cores personalizadas*/
     --cor-principal: #ffe6ff;
     --cor-escuro: #000000;
     --cor-secundaria: #ff77eda4;
@@ -15,283 +20,34 @@
         font-family: 'Montserrat', sans-serif;
     }
 
-    header {
-        background: #ffe6ff;
-        padding: 20px 0;
-        width: 100%;
-    }
-
     .banner {
         width: 100%;
     }
 
-    .titulo-principal {
-        text-align: center;
-        font-size: 2em;
-        margin: 0 0 0em;
-        clear: left;
-    }
+    main {
 
-    .principal {
-        padding: 3em 0;
-        background: #7715a5;
-        width: 100%;
-        margin: 0 auto;
-    }
+}
 
-    .principal p {
-        margin: 0 0 1em;
-    }
+.enviar {
+    width: 40%;
+    padding: 15px 0;
+    background: #896540;
+    color: white;
+    font-weight: bold;
+    font-size: 18px;
+    border: none;
+    border-radius: 5px;
+    transition: 1s all;
+    cursor: pointer;
+}
 
-    .principal strong {
-        font-weight: bold;
-    }
-
-    .principal em {
-        font-style: italic;
-    }
-
-    .utensilios {
-        width: 30%;
-        margin: 0 20px 20px 500px;
-    }
-
-    .imagembeneficios {
-        width: 200%;
-        opacity: 1;
-        transition: 400ms;
-        box-shadow: 10px 10px 10px 0 #000000;
-    }
-
-    .caixa {
-        position: relative;
-        width: 1200px;
-        margin: 0 auto;
-    }
-
-    nav {
-        position: static;
-    }
-
-    nav li {
-        display: inline;
-        margin: 0 0 0 15px;
-    }
-
-    nav a {
-        text-transform: uppercase;
-        color: #000000;
-        color: var (--cor-preto);
-        font-weight: bold;
-        font-size: 22px;
-        text-decoration: none;
-    }
-
-    nav a:hover {
-        color: C78C19;
-        text-decoration: underline;
-    }
-
-    .produtos {
-        width: 940px;
-        margin: 0 auto;
-        padding: 50px 0;
-    }
-
-    .produtos li {
-        display: inline-block;
-        text-align: center;
-        width: 30%;
-        vertical-align: top;
-        margin: 0 1.5%;
-        padding: 30px 20px;
-        box-sizing: border-box;
-        border: 2px solid #000000;
-        border: var (--cor-escuro);
-        border-radius: 10px;
-    }
-
-    .produtos li:hover {
-        border-color: #030327;
-        border-color: var (--cor-principal);
-    }
-
-    .produtos li:active {
-        border-color: #088C19;
-        border-color: var (--cor-rosaescuro);
-    }
-
-    .produtos h2 {
-        font-size: 30px;
-        font-weight: bold;
-    }
-
-    .produtos li:hover h2 {
-        font-size: 34px;
-    }
-
-    .produto-descricao {
-        font-size: 18px;
-    }
-
-    .produto-preco {
-        font-size: 22px;
-        font-weight: bold;
-        margin-top: 10px;
-    }
-
-    main {}
-
-    .beneficios {
-        padding: 3em 0;
-        background: #f01a3e;
-
-    }
-
-    .conteudo-beneficios {
-        width: 640px;
-        margin: 0 auto;
-    }
-
-    .lista-beneficios {
-        width: 40%;
-        display: inline-block;
-        vertical-align: top;
-    }
-
-    .itens {
-        line-height: 1.5;
-    }
-
-    .itens:first-child {
-        font-weight: bold;
-    }
-
-    .itens:before {
-        content: "✔️";
-    }
-
-    .imagem-beneficios {
-        width: 60%;
-        opacity: 1;
-        transition: 400ms;
-        box-shadow: 10px 10px 10px 0 #000000;
-    }
-
-    .imagem-beneficios:hover {
-        opacity: 0.3;
-    }
-
-    .form-center {
-        max-width: 600px;
-        margin: 40px auto;
-        padding: 30px;
-        width: 100%;
-    }
-
-    .form-center label,
-    .form-center legend {
-        display: block;
-        font-size: 16px;
-        margin: 0 0 10px;
-    }
-
-    .form-center input {
-        display: inline-block;
-        margin: 0 0 20px;
-        padding: 10px 25px;
-        width: auto;
-    }
-
-    .form-center input-padrao {
-        display: inline-block;
-        margin: 0 0 20px;
-        padding: 10px 25px;
-        width: 100%;
-    }
-
-    .checkbox {
-        margin: 20px 0;
-    }
-
-  footer {
-        text-align: center;
-        background: url  ("img/bg.jpg");
-        padding: 40px 0;
-    }
-
-    .copyright {
-        color: #000000;
-        font-size: 13px;
-        margin: 20px 0 0;
-    }
-
-    .enviar {
-        width: 40%;
-        padding: 15px 0;
-        background: #896540;
-        color: white;
-        font-weight: bold;
-        font-size: 18px;
-        border: none;
-        border-radius: 5px;
-        transition: 1s all;
-        cursor: pointer;
-    }
-
-    .enviar:hover {
-        background: rgb(255, 253, 251);
-        transform: scale(1.2);
-    }
-
-    table {
-        width: 100%;
-        margin: 20px 0 20px;
-        table-layout: fixed;
-        text-align: center;
-    }
-
-    thead {
-        background: #555555;
-        color: white;
-        background: var (--cor-cinzamédioaescuro);
-        color: var (--cor-branco);
-        font-weight: bold;
-    }
-
-    td,
-    th {
-        border: 1px solid #000000;
-        border: var (--cor-preto);
-        padding: 8px 15px;
-    }
-
-    .mapa {
-        padding: 3em 0;
-        background-color: linear-gradient(#e95dc6d2, #888888);
-        background-color: var (--cor-, --cor-cinza);
-    }
-
-    .mapa p {
-        margin: 0 0 2em;
-        text-align: center;
-    }
-
-    .mapa-conteudo {
-        width: 940px;
-        margin: 0 auto;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-    }
-
-    .video {
-        width: 560px;
-        margin: 2em auto;
-    }
+.enviar:hover {
+    background: rgb(255, 253, 251);
+    transform: scale(1.2);
+}
 
 
-    /* SELETORES AVANÇADOS PARA SEREM USADOS
+/* SELETORES AVANÇADOS PARA SEREM USADOS
 
 main p {
     background: red;
@@ -315,41 +71,59 @@ img ~ p {
 
 */
 
-    @media screen and (max-width: 480px) {
+@media screen and (max-width: 480px) {
 
-        .caixa,
-        .principal,
-        .conteudo-beneficios,
-        .mapa-conteudo,
-        .video {
-            width: auto;
-        }
-
-        h1 {
-            text-align: center;
-        }
-
-        nav {
-            position: static;
-        }
-
-        .lista-beneficios,
-        .imagem-beneficios {
-            width: 100%;
-        }
-
+    .caixa,
+    .principal,
+    .conteudo-beneficios,
+    .mapa-conteudo,
+    .video {
+        width: auto;
     }
+
+    h1 {
+        text-align: center;
+    }
+
+    nav {
+        position: static;
+    }
+
+    .lista-beneficios,
+    .imagem-beneficios {
+        width: 100%;
+    }
+
+}
+
+:root {
+    --cor-azul: #c486c4;
+}
+
+.img-container {
+    position: relative;
+    display: inline-block;
+}
+
+.img-container::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 5px;
+    background-color: var(--cor-azul);
+    transform: translateY(-50%);
 
     :root {
-        --cor-azul: #c486c4;
+        --cor-azul: #7779ff;
     }
 
-    .img-container {
+    .sua-classe-da-imagem {
         position: relative;
-        display: inline-block;
     }
 
-    .img-container::before {
+    .sua-classe-da-imagem::before {
         content: "";
         position: absolute;
         top: 0;
@@ -357,23 +131,5 @@ img ~ p {
         width: 100%;
         height: 5px;
         background-color: var(--cor-azul);
-        transform: translateY(-50%);
 
-        :root {
-            --cor-azul: #7779ff;
-        }
-
-        .sua-classe-da-imagem {
-            position: relative;
-        }
-
-        .sua-classe-da-imagem::before {
-            content: "";
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 5px;
-            background-color: var(--cor-azul);
-       
-        }
+    }
