--- a/styles/footer.css
+++ b/styles/footer.css
@@ -4,6 +4,10 @@ footer {
         padding: 40px 0;
 }
    
+.logofooter {
+    width: 100%;
+}
+
 .copyright {
     color: #000000;
     font-size: 13px;
