--- a/styles/header.css
+++ b/styles/header.css
@@ -10,7 +10,19 @@ header {
 
     }
 
-    nav {
+    .logo {
+    display: flex;
+    align-items: center;
+    font-size: 1.5em;
+    font-weight: bold;
+}
+
+.header-logo {
+    width: 90px;
+    margin-right: 10px;
+}
+    
+nav {
         position: static;
     }
 
