--- a/styles/beneficios.css
+++ b/styles/beneficios.css
@@ -49,3 +49,8 @@
     width: 560px;
     margin: 2em auto;
 }
+
+@media screen and (min-width: 480x) {
+     .conteudo-beneficios {
+        flex-direction: column;
+     }
