--- a/styles/beneficios.css
+++ b/styles/beneficios.css
@@ -1,4 +1,5 @@
- .beneficios {
+/* Estilização para telas menores */
+.beneficios {
         padding: 3em 0;
         background: #f01a3e;
 
@@ -10,6 +11,7 @@
 }
 
     .lista-beneficios {
+        list-style: none;
         width: 40%;
         display: inline-block;
         vertical-align: top;
