--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@
 @import url(/styles/contatos.css);
 @import url(/styles/beneficios.css);
 @import url(/styles/principal.css);
+@import url(/styles/mapa.css);
 
 :root {
     /*cores personalizadas*/
