--- a/styles/mapa.css
+++ b/styles/mapa.css
@@ -16,3 +16,7 @@
     justify-content: center;
     align-items: center;
 }
+
+@media screen and (min-width: 1080px) {
+    .mapa-conteudo {
+        width: 940px;
