--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
 
-@import url(/styles/header.css) @import url(/styles/footer.css);
+@import url(/styles/header.css);
+@import url(/styles/footer.css);
 @import url(/styles/produtos.css);
 @import url(/styles/contatos.css);
 @import url(/styles/beneficios.css);
