--- a/styles/produtos.css
+++ b/styles/produtos.css
@@ -24,7 +24,7 @@
     border-radius: 10px;
 }
 
-card-produto {
+.card-produto {
     text-align: center;
     padding: 30px 20px;
     box-sizing: border-box;
